loopwhile.BaggleSeeker.scala.error
Compilation error:
BaggleSeeker:3: error: '(' expected but identifier found.
else {while isOverBaggle()==false 
            ^